<resources>
    <string name="app_name">Your App Name</string>
    <string name="login_title">Welcome Back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_prompt">Don\'t have an account? Register</string>
    <string name="register_button">Log In</string>
</resources>